--- a/Thai Sentiment.ipynb
+++ b/Thai Sentiment.ipynb
@@ -20,7 +20,9 @@
         "colab_type": "text"
       },
       "source": [
-        "[ข้อมูล TCAS](https://raw.githubusercontent.com/PyThaiNLP/thai-sentiment-analysis-dataset/master/tcas61.csv)"
+        "[ข้อมูล TCAS](https://raw.githubusercontent.com/PyThaiNLP/thai-sentiment-analysis-dataset/master/tcas61.csv)\n",
+        "\n",
+        "credit : [@nagarindkx](https://github.com/nagarindkx) ดู[โค้ดเดิม](https://github.com/nagarindkx/python/blob/master/python%2006%20Sentiment%20Analysis.ipynb) และอ่าน[บทความ](https://sysadmin.psu.ac.th/2019/01/15/python-06-sentiment-analysis-with-keras-tensorflow/)"
       ]
     },
     {
